# bot-runner-rs

./: Cargo.toml  build.cmd  readme.txt  tasks.txt
async-worker/: Cargo.toml
async-worker/src/: main.rs  process.rs  update_status.rs
client/: Cargo.toml
data/: master_config.json  worker_config.json
logic/src/: lib.rs  master.rs  prelude.rs  worker.rs
master/: Cargo.toml
master/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  state.rs  worker_info.rs
master/src/actors/: BotRunner.mmd  master.rs  mod.rs  result.rs  worker.rs
master/src/actors/master/: mod.rs
master/src/actors/master/messages/: get_worker_state.rs  mod.rs  register_worker.rs  start_job.rs  worker_dead.rs
master/src/actors/worker/: mod.rs
master/src/actors/worker/messages/: mod.rs  status.rs
master/src/handlers/: mod.rs  register.rs  start_job.rs  state.rs  state_v2.rs  update.rs
shared/: Cargo.toml
shared/src/: archiving.rs  config_reader.rs  constants.rs  lib.rs  models.rs
worker/: Cargo.toml
worker/src/: error.rs  lib.rs  main.rs
zip_test/: Cargo.toml
zip_test/src/: main.rs
