[package]
name = "async-worker"
version = "0.1.0"
authors = ["a.erzyamkin <a.erzyamkin@corp.mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
#async-std = "1"
#futures-io = "0.3"
tokio = { version = "0.2", features = ["full"] }
surf = "1"
serde = "1.0"
serde_json = "1.0"
zip = "0.5"

shared = { path = "../shared" }