[package]
name = "master"
version = "0.1.0"
authors = ["Alexey Erzyamkin <alexey.erzyamkin@outlook.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0-rc"
actix-files = "0.2"
actix = "0.9"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"

uuid = { version = "0.8", features = ["serde", "v4"] }

shared = { path = "../shared" }