[package]
name = "worker"
version = "0.1.0"
authors = ["Alexey Erzyamkin <alexey.erzyamkin@outlook.com>"]
edition = "2018"

[dependencies]

serde = "1.0"
serde_json = "1.0"
zip = "0.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.13", features = ["full"] }
futures = "0.3"
url = "2.1"

shared = { path = "../shared" }